# ai-development-platform

./: .env.example  .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml
apps/server/: README.md  alembic.ini  pyproject.toml
apps/server/migrations/: env.py
apps/server/migrations/versions/: 0c1f25ef8dc8_add_grant_and_project_working_scope.py  (+16 more)
apps/server/tests/: conftest.py  test_agy_alpha_baseline_smoke.py  test_agy_auto_drain.py  test_antigravity_cli_adapter.py  test_antigravity_cli_process_failure.py  test_attempt_actions.py  test_attempt_retry_policy.py  test_auth.py  test_codex_structured_bridge.py  test_config.py  test_conversations_and_tools.py  test_db_metadata.py  test_external_cli_active_run_guard.py  test_external_cli_adapter_contract.py  test_git_command_service.py  test_golden_path_readme_e2e.py  test_health.py  test_manual_worker_adapter.py  test_migrations.py  test_mock_worker_adapter.py  test_mvp_baseline_smoke.py  test_operations_observability.py  test_owner_attempt_tool_calls.py  test_owner_context_builder.py  test_owner_conversation_input.py  test_owner_provider_events.py  test_owner_provider_session.py  test_owner_providers.py  test_owner_start_existing_attempt.py  test_owner_task_traceability.py  test_owner_tool_call_bridge.py  test_owner_tool_loop.py  test_owner_worker_device_binding.py  test_owner_worker_run_agy_gate.py  test_owner_worker_run_agy_handoff.py  test_owner_worker_run_tool.py  test_owner_worker_start_tool.py  test_policy_approvals.py  test_process_runner.py  test_process_runtime_provider.py  (+21 more)
docs/: README.md  (+10 more)
(+81 files in other folders)
